# cortex

./: .gitignore  CONTEXT.md  Cargo.toml  PLAN.md  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
cortex-adapters/: Cargo.toml
cortex-blueprint/: Cargo.toml
cortex-cli/: Cargo.toml
cortex-cli/src/: lib.rs  main.rs
cortex-cli/tests/: integration_tests.rs
cortex-directives/: Cargo.toml
cortex-kernel/: Cargo.toml
cortex-policy/: Cargo.toml
cortex-registry/: Cargo.toml
cortex-runtime/: Cargo.toml
cortex-store/: Cargo.toml
cortex-types/: Cargo.toml
docs/: ARCHITECTURE.md  AUDIT.md  EXTENDING.md  GLOSSARY.md  OS-KERNEL-MIGRATION.md  UCP-SPEC.md
scripts/: check-dependencies.sh
skills/: install.js
src/: index.ts  mcp-server.ts
test/: artifact-builder.test.ts  artifacts.test.ts  blueprint.test.ts  budget.test.ts  cli-harness.test.ts  compiler-runtime.test.ts  context-compiler.test.ts  dispatch.test.ts  e2e.test.ts  egress.test.ts  http-harness.test.ts  ingress.test.ts  intent-compiler.test.ts  kernel-interpreter.test.ts  kernel-primitives.test.ts  kernel.test.ts  loop-context.test.ts  loop-engine.test.ts  mcp-server.test.ts  metrics.test.ts  output-parser.test.ts  patch-apply.test.ts  planner.test.ts  policies.test.ts  registry.test.ts  resolver.test.ts  router.test.ts  runtime-kernel.test.ts  skill.test.ts  state-graph.test.ts  templates.test.ts  triage-ambiguity.test.ts  triage-context-filter.test.ts  triage-decompose.test.ts  triage-normalize.test.ts  triage-pipeline.test.ts  triage-routing.test.ts  triage-strategy.test.ts  ucp.test.ts
(+143 files in other folders)
