[workspace]
resolver = "2"
members = [
    "cortex-types",
    "cortex-blueprint",
    "cortex-policy",
    "cortex-kernel",
    "cortex-registry",
    "cortex-store",
    "cortex-adapters",
    "cortex-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
