[workspace]
resolver = "2"
members = [
    "cortex-types",
    "cortex-blueprint",
    "cortex-policy",
    "cortex-kernel",
    "cortex-registry",
    "cortex-store",
    "cortex-adapters",
    "cortex-directives",
    "cortex-runtime",
    "cortex-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
